# slider

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  bootstrap-windows-dev-env.bat  build-inno-setup.bat  build-msvc-debug.bat  build-msvc-release.bat  clean.bat  clean.ps1  test-all.bat  vcpkg.json
.github/workflows/: release.yml  windows-build.yml
cmake/: CodeCoverage.cmake  CompilerWarnings.cmake  Dependencies.cmake  LinkTimeOptimization.cmake  PackageOrganizer.cmake  Packaging.cmake  ProjectOptions.cmake  Sanitizers.cmake  Versioning.cmake  version.h.in
docs/: developer.md
include/slider/: board.h  game_controller.h  savefile.h  scrambler.h  solver.h  state.h  theme.h
installer/: slider.iss
resources/: icon.icns  themes.json
scripts/: build-linux.sh  build-macos.sh  generate_sounds.py
scripts/bootstrap/: bootstrap-linux.sh  bootstrap-macos.sh  bootstrap-msys2.ps1  bootstrap-windows.ps1  bootstrap-wsl2-toolchains.ps1
scripts/ci/: ci-build.ps1  ci-configure.ps1  ci-test.ps1
scripts/helpers/: common.ps1
src/app/: game_controller.cc  slider.rc  slider.rc.in  wx_app.cc
src/core/: board.cc  savefile.cc  scrambler.cc  solver.cc  state.cc
tests/unit/: board_test.cc  game_controller_test.cc  gui_logic_test.cc  savefile_test.cc  scrambler_test.cc  serialization_test.cc  solver_test.cc  state_validity_test.cc
